--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
     <center>
-        <form action="/" method="post">
+        <form action="/" method="POST">
             <label for="city">City name</label>
             <input id="city" type="text" name="cityname">
             <button type="submit">Go</button>
